# public-marketplace

./: README.md  marketplace.json
.claude-plugin/: marketplace.json
channels/beta/.claude-plugin/: marketplace.json
plugins/agentic-dev-fastmcp-dev/.claude-plugin/: plugin.json
plugins/agentic-dev-lexy/agents/: knowledge-researcher.md
plugins/agentic-dev-mp-admin/.claude-plugin/: plugin.json
plugins/agentic-dev-tts-ipa-pronunciation/.claude-plugin/: plugin.json
plugins/aidoomd/: LICENSE
plugins/aidoomd/.claude-plugin/: plugin.json
plugins/aidoomd/agents/: map-qa-reviewer.md
plugins/anchor-year-method/.claude-plugin/: plugin.json
plugins/cloud-apple-calendar/: .mcp.json  README.md
plugins/cloud-apple-reminders/: .mcp.json
plugins/cloud-apple-reminders/.claude-plugin/: plugin.json
plugins/cloud-apple-reminders/mcp-servers/: pyproject.toml
plugins/cloud-apple-reminders/mcp-servers/src/apple_reminders/: __init__.py  __main__.py  models.py  repository.py
plugins/cloud-apple-reminders/mcp-servers/src/apple_reminders/tools/: __init__.py
plugins/cloud-findmy/: README.md
plugins/cloud-findmy/.claude-plugin/: plugin.json
plugins/cloud-findmy/mcp-servers/findmy-server/: cache.py  credentials.py  formatter.py  pyproject.toml  server.py  tools_admin.py
plugins/cloud-findmy/mcp-servers/findmy-server/apple_auth/: __init__.py  auth_flow.py  client_provider.py  prompts.py
plugins/cloud-google-maps/: .mcp.json  README.md
plugins/cloud-google-maps/mcp-servers/google-maps-server/: cache.py  formatter.py  pyproject.toml  secrets_manager.py  server.py
plugins/cloud-mac-messages/: .mcp.json
plugins/cloud-mac-messages/mcp-servers/mac-messages-mcp/: pyproject.toml
plugins/cloud-mac-messages/mcp-servers/mac-messages-mcp/mac_messages_mcp/: config.py  messages.py  secrets.py
plugins/cloud-mac-messages/mcp-servers/mac-messages-mcp/tests/: test_config.py
plugins/cloud-sandals/: .mcp.json  README.md
plugins/cloud-sandals/mcp-servers/sandals-mcp/: pyproject.toml  server.py  utils.py
plugins/cloud-sandals/mcp-servers/sandals-mcp/data/: restaurants.json  rooms.json
plugins/cloud-sandals/mcp-servers/sandals-mcp/tools/: check_availability.py  rsc_base.py  update_rooms.py
plugins/code-forensics-plugin/.claude-plugin/: plugin.json
plugins/code-forensics-plugin/agents/: code-forensics-analyst.md
plugins/demacify/: README.md
plugins/dev-intellidiff/.claude-plugin/: plugin.json
plugins/dev-project-management/: README.md
plugins/dev-project-management/commands/: project-brief.md  project-consult.md  project-retro.md  review-proposal.md
plugins/dev-retro/.claude-plugin/: plugin.json
plugins/dev-snippets-linux-bash/.claude-plugin/: plugin.json
plugins/dev-snippets-lowlevel-security/.claude-plugin/: plugin.json
plugins/dev-snippets-lowlevel-security/agents/: snippet-router.md
plugins/dev-snippets-python-utilities/.claude-plugin/: plugin.json
plugins/device-display-diagnostics/.claude-plugin/: plugin.json
plugins/disable-sleep-ubuntu/: SKILL.md
plugins/disable-sleep-ubuntu/.claude-plugin/: plugin.json
plugins/disable-windows-ai/.claude-plugin/: plugin.json
plugins/discord-notifier/.claude-plugin/: plugin.json
plugins/discord-notifier/scripts/: config_loader.py  send_alert.py
plugins/docker-cleanup/: README.md
plugins/docker-cleanup/.claude-plugin/: plugin.json
plugins/external-ip/.claude-plugin/: plugin.json
plugins/fastmcp-dev/.claude-plugin/: plugin.json
plugins/fastmcp-dev/commands/: upgrade-mcp-fastmcp3.md
plugins/fastmcp-dev/skills/mcp-elicitations/scripts/fastmcp-wizard/: pyproject.toml  test_imports.py
plugins/fastmcp-dev/skills/mcp-elicitations/scripts/fastmcp-wizard/examples/: basic_wizard.py
plugins/fb-reel-downloader/: README.md
plugins/fb-reel-downloader/.claude-plugin/: plugin.json
plugins/findmy-server/: .mcp.json
plugins/findmy-server/.claude-plugin/: plugin.json
plugins/github-publish/.claude-plugin/: plugin.json
plugins/github-publish/references/: gitignore-templates.md  topics-reference.md
plugins/google-maps-server/.claude-plugin/: plugin.json
plugins/humanizer/: .gitignore
plugins/humanizer/.claude-plugin/: plugin.json
plugins/image-crop-rotate/: SKILL.md
plugins/image-crop-rotate/.claude-plugin/: plugin.json
plugins/image-crop-rotate/scripts/: crop_and_rotate.py
plugins/intellidiff/.claude-plugin/: plugin.json
plugins/jefit-mcp/: .mcp.json
plugins/jefit-mcp/.claude-plugin/: plugin.json
plugins/jefit-mcp/mcp-servers/jefit-mcp/: pyproject.toml  server.py  workout_info.py
plugins/jefit-mcp/mcp-servers/jefit-mcp/tests/: test_server.py
plugins/lifestyle-jefit/: README.md
plugins/lifestyle-myfitnesspal/: README.md
plugins/lifestyle-myfitnesspal/mcp-servers/mcp-myfitnesspal/: config.py  export_cookies.py  pyproject.toml  server.py
plugins/lifestyle-myfitnesspal/mcp-servers/mcp-myfitnesspal/tests/: test_server_inmemory.py
plugins/mac-messages-mcp/: README.md
plugins/mcp-myfitnesspal/: .mcp.json
plugins/mcp-server-apple-calendar/mcp-servers/: pyproject.toml
plugins/mcp-server-apple-calendar/mcp-servers/src/apple_calendar/: models.py  repository.py
plugins/mcp-server-apple-calendar/mcp-servers/src/apple_calendar/tools/: __init__.py
plugins/mcp-server-apple-calendar/mcp-servers/tests/: test_server_inmemory.py
plugins/mcp-server-apple-reminders/: .gitignore  README.md
plugins/media-fb-reel-downloader/: .gitignore
plugins/meme-aidoomd/: README.md
plugins/project-management/: USER_GUIDE.md
plugins/prosvc-humanizer/: README.md
plugins/sandals-mcp/: .gitignore
plugins/sublime-home-end-keys-macos/: SKILL.md
plugins/sys-macos-screenshot/: .mcp.json
plugins/sys-macos-screenshot/mcp-servers/mcp-screenshot/: pyproject.toml  requirements.md  server.py
plugins/sys-macos-screenshot/mcp-servers/mcp-screenshot/core/: __init__.py  capture.py  image_processing.py  models.py
plugins/sys-macos-sysinfo/: .mcp.json
plugins/sys-win-disable-windows-ai/: README.md
plugins/sys-win-elevation/: README.md
plugins/windows-elevation/: SKILL.md
(+309 files in other folders)
