[project]
name = "mcp-server-apple-reminders"
version = "2.1.0"
description = "FastMCP 3.x server for Apple Reminders integration on macOS"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastmcp>=3.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mcp-server-apple-reminders = "apple_reminders.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_reminders"]

[tool.hatch.build.targets.wheel.shared-data]
"src/apple_reminders/bin" = "apple_reminders/bin"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
