[project]
name = "mcp-server-apple-calendar"
version = "2.0.0"
description = "FastMCP 3.x server for Apple Calendar integration on macOS"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastmcp>=3.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-server-apple-calendar = "apple_calendar.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_calendar"]

[tool.hatch.build.targets.wheel.shared-data]
"src/apple_calendar/bin" = "apple_calendar/bin"
