[project]
name = "mcp-googlemaps-server"
version = "0.1.0"
description = "An MCP server to interact with Google Maps"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "keyring>=25.6.0",
    "httpx>=0.28.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
server = "server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

