[project]
name = "sandals-boujiebot-mcp"
version = "2.0.0"
description = "Luxury travel concierge MCP server for Sandals Resorts"
authors = [
    {name = "Batteryshark", email = "batteryshark@outlook.com"}
]
dependencies = [
    "fastmcp>=3.0.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
]
requires-python = ">=3.12"
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
