[project]
name = "mfp-mcp"
version = "0.1.0"
description = "FastMCP server for MyFitnessPal nutrition data access"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "lxml>=5.0.0",
    "browser-cookie3>=0.19.0",
    "measurement>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
