[project]
name = "fastmcp-wizard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "BatteryShark", email = "mercaldim@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.0.1",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
